# budget-tracker

./: Budget_Tracker.toml  Cargo.toml  Dockerfile  compose.yml  response.json  sample_date.json
.sqlx/: query-27572bb0574ce063db1b9dbeeffcdfb3eb44a2328835518046ed4f51b6f28681.json  query-a652a77378103604ef789248b8b2c4984e5f3cf300dc674e5fa5c15d5b597305.json  query-b666a0365df7ae808771df8c16f323caeccca40cd50c0cf48598ec5846015ece.json
migrations/: 20260103065321_budget-tracker.sql  20260108012712_category_not_null.sql  20260110040143_current_date_default.sql
src/: error.rs  main.rs  old_main.rs  summary.rs  transaction.rs
