[package]
name = "budget-tracker"
version = "0.1.0"
edition = "2024"
description = "Keeps track of your income and expenses"
license = "GFDL-1.3-or-later"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
rust_decimal = { version = "1.39.0", features = ["db-postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls"] }
toml = "0.9.10"
