[package]
name = "budget-tracker"
version = "0.1.0"
edition = "2024"
description = "Keeps track of your income and expenses"
license = "GFDL-1.3-or-later"

[dependencies]
axum = { version = "0.8.8", features = ["tracing"] }
axum-extra = { version = "0.12.5", features = ["erased-json"] }
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
rust_decimal = { version = "1.39.0", features = ["db-postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-async-std", "tls-native-tls", "postgres", "migrate", "time", "rust_decimal" ] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
